--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dannadori/googlemeet-segmentation-worker-js": "^1.0.30",
     "@mediapipe/selfie_segmentation": "^0.1.1675465747",
     "vue": "^3.3.4"
   },
